--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     background-color: wheat;
     border: 2px solid black;
     border-radius: 5%;
-    background-color: #E4FDE1; /* Light green */
 }
 
 h1{
@@ -18,16 +17,15 @@ h1{
     margin-bottom: -50px;
     font-size: 80px;
 }
+
 body{
-
-    background-color: #0F3057; /* Dark blue */
+    background-color: blueviolet;
 }
-
 
 .calculator{
     padding: 10px;
-    margin-left:20px;
-    margin-top: 20px;
+    margin-left:15px;
+    margin-top: 15px;
     margin-bottom: 20px;
     margin-right: 20px;
 }
@@ -40,7 +38,6 @@ body{
     font-weight: bold;
     font-size: x-large;
     transition: background-color 0.3s ease, color 0.3s ease;
-
 }
 
 .button:hover {
@@ -51,19 +48,10 @@ body{
 .display{
     border: 2px solid black;
     margin-right: 2px;
-    margin-bottom : 10px;
+    margin-bottom : 2px;
     padding: 10px;
     background-color: white;
-    min-height: 30px;
-    font-family: 'Arial', sans-serif;
-    font-size: 24px;
-    color: black;
-    border: 2px solid darkgray;
-    transition: border-color 0.3s ease;
-}
-
-.display:hover {
-    border-color: gray;
+    min-height: 20px;
 }
 .clear {
     width: 128px;
